--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=هل أنت متأكد
 are-you-sure-you-want-to-deactivate-the-selected-users=هل أنت متأكد من طلب تعطيل المستخدمين المختارين؟
 are-you-sure-you-want-to-deactivate-the-user=هل تريد بالتأكيد إلغاء تنشيط المستخدم؟
 are-you-sure-you-want-to-deactivate-this-user=هل تريد بالتأكيد إلغاء تنشيط هذا المستخدم؟
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=هل تريد بالتأكيد حذف التطبيق؟ لا توجد تخويلات أو رموز مميزة ذات صلة.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=هل تريد بالتأكيد حذف التطبيق؟ تؤدي هذه الإجراءات إلى إبطال تخويل واحد والرموز المميزة ذات الصلة.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=هل تريد بالتأكيد حذف التطبيق؟ تؤدي هذه الإجراءات إلى إبطال {0} من التخويلات والرموز المميزة ذات الصلة.
