--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Наистина ли 
 are-you-sure-you-want-to-deactivate-the-selected-users=Сигурни ли сте, че искате да деактивирате избраните потребители?
 are-you-sure-you-want-to-deactivate-the-user=Наистина ли искате да деактивирате потребителя? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Наистина ли искате да деактивирате този потребител? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Наистина ли искате да изтриете приложението? Няма разрешения или свързани маркери. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Наистина ли искате да изтриете приложението? Това действие отменя 1 разрешение и свързани символи. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
