--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Segur que voleu desact
 are-you-sure-you-want-to-deactivate-the-selected-users=Segur que voleu desactivar els usuaris seleccionats?
 are-you-sure-you-want-to-deactivate-the-user=Segur que voleu desactivar l'usuari?
 are-you-sure-you-want-to-deactivate-this-user=Segur que voleu desactivar aquest usuari?
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Segur que voleu suprimir l'aplicació? No hi ha autoritzacions ni testimonis associats.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Segur que voleu suprimir l'aplicació? Aquesta acció revoca 1 autorització i els testimonis associats.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Segur que voleu suprimir l'aplicació? Aquesta acció revoca {0} autoritzacions i els testimonis associats.
