--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Opravdu chcete deaktiv
 are-you-sure-you-want-to-deactivate-the-selected-users=Opravdu chcete deaktivovat označené uživatele?
 are-you-sure-you-want-to-deactivate-the-user=Opravdu chcete uživatele deaktivovat? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Opravdu chcete tohoto uživatele deaktivovat? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Opravdu chcete aplikaci odstranit? Neexistují žádné autorizace ani přidružené tokeny. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Opravdu chcete aplikaci odstranit? Tyto akce zruší autorizaci 1 a přidružené tokeny. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
