--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Er du sikker på, at d
 are-you-sure-you-want-to-deactivate-the-selected-users=Er du sikker på, at du vil deaktivere de valgte brugere? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-the-user=Er du sikker på, at du vil deaktivere brugeren? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Er du sikker på, at du vil deaktivere denne bruger? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Er du sikker på, at du vil slette programmet? Der er ingen godkendelser eller tilknyttede tokens. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Er du sikker på, at du vil slette programmet? Disse handlinger tilbagekalder 1 godkendelse og tilknyttede tokens. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
