--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Möchten Sie die ausge
 are-you-sure-you-want-to-deactivate-the-selected-users=Sind Sie sicher, dass Sie die ausgewählten Nutzer deaktivieren möchten?
 are-you-sure-you-want-to-deactivate-the-user=Sind Sie sicher dass Sie den Benutzer deaktivieren möchten?
 are-you-sure-you-want-to-deactivate-this-user=Sind Sie sicher, dass Sie diesen Benutzer deaktivieren möchten?
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Sind Sie sicher, dass Sie die Anwendung löschen möchten? Es gibt keine Autorisierungen oder verbundene Tokens.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Sind Sie sicher, dass Sie die Anwendung löschen möchten? Diese Aktion macht 1 Autorisierung und verbundene Tokens ungültig.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Sind Sie sicher, dass Sie die Anwendung löschen möchten? Diese Aktion macht {0} Autorisierungen und verbundene Tokens ungültig.
