--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=¿Está seguro de que 
 are-you-sure-you-want-to-deactivate-the-selected-users=¿Está seguro de que desea desactivar a los usuarios seleccionados?
 are-you-sure-you-want-to-deactivate-the-user=¿Está seguro de que quiere desactivar el usuario?
 are-you-sure-you-want-to-deactivate-this-user=¿Está seguro de que quiere desactivar este usuario?
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=¿Está seguro de que quiere eliminar la aplicación? No hay autorizaciones ni tokens asociados.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=¿Está seguro de que quiere eliminar la aplicación? Esta acción revoca 1 autorización y los tokens asociados.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=¿Está seguro de que quiere eliminar la aplicación? Esta acción revoca {0} autorizaciones y los tokens asociados.
