--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Kas soovite kindlasti 
 are-you-sure-you-want-to-deactivate-the-selected-users=Kas oled kindel, et soovid valitud kasutajad deaktiveerida?
 are-you-sure-you-want-to-deactivate-the-user=Kas soovite kindlasti kasutaja desaktiveerida? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Kas soovite kindlasti selle kasutaja desaktiveerida? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Kas soovite kindlasti rakenduse kustutada? Autoreid ega seotud lubasid pole. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Kas soovite kindlasti rakenduse kustutada? See tegevus tühistab 1 autoriseeringu ja seotud žetoonid. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
