--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=آیا مطمئن هس
 are-you-sure-you-want-to-deactivate-the-selected-users=آيا مطمئن هستيد که می خواهيد اين کاربران را غير فعال کنيد؟
 are-you-sure-you-want-to-deactivate-the-user=آیا مطمئن هستید که می خواهید کاربر را غیر فعال کنید؟ (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=آیا مطمئن هستید که می خواهید این کاربر را غیر فعال کنید؟ (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=آیا مطمئن هستید که می خواهید برنامه را حذف کنید؟ هیچ مجوز یا نشانه مرتبطی وجود ندارد. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=آیا مطمئن هستید که می خواهید برنامه را حذف کنید؟ این اقدامات مجوز ۱ و نشانه های مرتبط را لغو می کند. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
