--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Voulez-vous vraiment d
 are-you-sure-you-want-to-deactivate-the-selected-users=Êtes-vous sûr de vouloir désactiver les utilisateurs sélectionnés ?
 are-you-sure-you-want-to-deactivate-the-user=Voulez-vous vraiment désactiver l'utilisateur ?
 are-you-sure-you-want-to-deactivate-this-user=Voulez-vous vraiment désactiver cet utilisateur ?
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Voulez-vous vraiment supprimer l'application? Il n'y a aucune autorisation ou jeton associé.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Voulez-vous vraiment supprimer l'application? Cette action révoque 1 autorisation et les jetons associés.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Voulez-vous vraiment supprimer l'application? Cette action révoque {0} autorisations et les jetons associés.
