--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Biztosan deaktiválni 
 are-you-sure-you-want-to-deactivate-the-selected-users=Biztosan deaktiváljuk a kiválasztott felhasználókat?
 are-you-sure-you-want-to-deactivate-the-user=Biztosan deaktiválni kívánja a felhasználót?
 are-you-sure-you-want-to-deactivate-this-user=Biztosan deaktiválni kívánja ezt a felhasználót?
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Biztosan törölni kívánja az alkalmazást? Nincsenek hitelesítések, sem hozzárendelt tokenek.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Biztosan törölni kívánja az alkalmazást? Ez a művelet megvon 1 hitelesítést és a hozzárendelt tokeneket.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Biztosan törölni kívánja az alkalmazást? Ez a művelet megvon {0} hitelesítést és a hozzárendelt tokeneket.
