--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Yakin ingin menonaktif
 are-you-sure-you-want-to-deactivate-the-selected-users=Apakah Anda yakin ingin menonaktifkan pengguna terpilih?
 are-you-sure-you-want-to-deactivate-the-user=Yakin ingin menonaktifkan pengguna? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Yakin ingin menonaktifkan pengguna ini? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Yakin ingin menghapus aplikasi ini? Tidak ada otorisasi atau token terkait. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Yakin ingin menghapus aplikasi ini? Tindakan ini mencabut 1 otorisasi dan token terkait. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
