--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=האם אתה בטוח
 are-you-sure-you-want-to-deactivate-the-selected-users=האם אתה בטוח שברצונך לנטרל את המשתמשים שנבחרו?
 are-you-sure-you-want-to-deactivate-the-user=האם אתה בטוח שברצונך להפוך את המשתמש הזה ללא פעיל?
 are-you-sure-you-want-to-deactivate-this-user=האם אתה בטוח שברצונך לבטל את ההפעלה של משתמש זה? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=האם אתה בטוח שברצונך למחוק את היישום? אין הרשאות או אסימונים קשורים.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=האם אתה בטוח שברצונך למחוק את היישום? פעולה זו מבטלת הרשאה 1 ואת האסימונים הקשורים.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=האם אתה בטוח שברצונך למחוק את היישום? פעולה זו מבטלת {0} הרשאות ואת האסימונים הקשורים.
