--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Adakah awda pasti hend
 are-you-sure-you-want-to-deactivate-the-selected-users=Adakah awda pasti hendak menyahaktifkan pengguna terpilih? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-the-user=Adakah awda pasti hendak menyahaktifkan pengguna? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Adakah awda pasti hendak menyahaktifkan pengguna ini? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Adakah awda pasti hendak menghapuskan aplikasi itu? Tiada kebenaran atau token yang berkaitan. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Adakah awda pasti hendak menghapuskan aplikasi itu? Tindakan ini membatalkan 1 kebenaran dan token yang berkaitan. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
