--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Er du sikker på at du
 are-you-sure-you-want-to-deactivate-the-selected-users=Er du sikker på at du vil deaktivere de valgte brukerne?
 are-you-sure-you-want-to-deactivate-the-user=Er du sikker på at du vil deaktivere brukeren? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Er du sikker på at du vil deaktivere denne?
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Er du sikker på at du ønsker å slette applikasjonen? Det finnes ingen autorisasjoner eller relaterte nøkler.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Er du sikker på at du ønsker å slette applikasjonen? Denne handlingen trekker tilbake 1 autorisasjon og relaterte nøkler.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Er du sikker på at du ønsker å slette applikasjonen? Denne handlingen rekker tilbake {0} autorisasjoner og relaterte nøkler.
