--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Weet u zeker dat u de 
 are-you-sure-you-want-to-deactivate-the-selected-users=Weet u zeker dat u de geselecteerde gebruikers wilt deactiveren?
 are-you-sure-you-want-to-deactivate-the-user=Weet u zeker dat u deze gebruiker wilt deactiveren?
 are-you-sure-you-want-to-deactivate-this-user=Weet u zeker dat u deze gebruiker wilt deactiveren?
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Weet u zeker dat u de applicatie wilt verwijderen? Er zijn geen autorisaties of bijbehorende tokens.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Weet u zeker dat u de applicatie wilt verwijderen? Deze actie trekt 1 autorisatie en bijbehorende tokens in.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Weet u zeker dat u de applicatie wilt verwijderen? Deze actie trekt {0} autorisaties en bijbehorende tokens in.
