--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Naozaj chcete deaktivo
 are-you-sure-you-want-to-deactivate-the-selected-users=Ste si istý, že chcete deaktivovať vybraných používateľov?
 are-you-sure-you-want-to-deactivate-the-user=Naozaj chcete deaktivovať používateľa? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Naozaj chcete deaktivovať tohto používateľa? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Naozaj chcete odstrániť aplikáciu? Neexistujú žiadne oprávnenia ani priradené tokeny. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Naozaj chcete odstrániť aplikáciu? Táto akcia zruší 1 autorizáciu a priradené tokeny. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
