--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Ali ste prepričani, d
 are-you-sure-you-want-to-deactivate-the-selected-users=Ste prepričani, da želite deaktivirati izbrane uporabnike?
 are-you-sure-you-want-to-deactivate-the-user=Ali ste prepričani, da želite deaktiviranje uporabnika? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Ali ste prepričani, da želite deaktiviranje tega uporabnika? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Ali ste prepričani, da želite izbrisati program? Ni dovoljenj ali povezanih žetonov. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Ali ste prepričani, da želite izbrisati program? S tem dejanjem se prekliče 1 avtorizacija in povezani žetoni. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
