--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Vill du verkligen inak
 are-you-sure-you-want-to-deactivate-the-selected-users=Vill du verkligen avaktivera de valda användarna?
 are-you-sure-you-want-to-deactivate-the-user=Vill du verkligen inaktivera användaren?
 are-you-sure-you-want-to-deactivate-this-user=Vill du verkligen inaktivera den här användaren?
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Vill du verkligen ta bort applikationen? Det finns inga auktoriseringar eller associerade token.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Vill du verkligen ta bort applikationen? Den här åtgärden upphäver 1 auktorisering och associerade tokens.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Vill du verkligen ta bort applikationen? Den här åtgärden upphäver {0} auktoriseringar och associerade tokens.
