--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Ви дійсно ба
 are-you-sure-you-want-to-deactivate-the-selected-users=Ви впевнені у тому, що хочете відключити вибраних користувачів?
 are-you-sure-you-want-to-deactivate-the-user=Ви дійсно бажаєте вимкнути користувача? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Ви дійсно бажаєте вимкнути цього користувача? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Справді видалити застосунок? Немає авторизації або пов'язаних маркерів. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Справді видалити застосунок? Ця дія скасовує 1 авторизацію та пов'язані з нею токени. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
