--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Bạn có chắc chắ
 are-you-sure-you-want-to-deactivate-the-selected-users=Bạn có chắc chắn là muốn vô hiệu hóa những người dùng đã chọn ?
 are-you-sure-you-want-to-deactivate-the-user=Bạn có chắc chắn muốn hủy kích hoạt người dùng không? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Bạn có chắc chắn muốn hủy kích hoạt người dùng này không? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Bạn có chắc chắn muốn xóa bỏ ứng dụng không? Không có ủy quyền hoặc mã thông báo liên quan. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Bạn có chắc chắn muốn xóa bỏ ứng dụng không? Hành động này thu hồi 1 ủy quyền và mã thông báo liên quan. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
