--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Oletko varma, että ha
 are-you-sure-you-want-to-deactivate-the-selected-users=Oletko varma, että haluat deaktivoida valitut käyttäjät?
 are-you-sure-you-want-to-deactivate-the-user=Haluatko varmasti poistaa tämän käyttäjän aktivoinnin?
 are-you-sure-you-want-to-deactivate-this-user=Haluatko varmasti poistaa tämän käyttäjän aktivoinnin?
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Oletko varma, että haluat poistaa sovelluksen? Ei ole valtuutuksia tai niihin liittyviä tokeneita.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Oletko varma, että haluat poistaa sovelluksen? Tämä toimia peruuttaa 1 valtuutuksen ja niihin liittyvät tokenit.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Oletko varma, että haluat poistaa sovelluksen? Tämä toiminta peruuttaa {0} valtuutusta ja niihin liittyvät tokenit.
