--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Ar tikrai norite išju
 are-you-sure-you-want-to-deactivate-the-selected-users=Ar tikrai norite išjungti pasirinktus vartotojus? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-the-user=Ar tikrai norite išjungti vartotoją? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Ar tikrai norite išjungti šį vartotoją? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Ar tikrai norite panaikinti taikomąją programą? Nėra leidimų ar susietų atpažinimo ženklų. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Ar tikrai norite panaikinti taikomąją programą? Šie veiksmai panaikina 1 autorizavimo ir susijusių atpažinimo ženklų. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
