--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Czy na pewno chcesz de
 are-you-sure-you-want-to-deactivate-the-selected-users=Na pewno chcesz wyłączyć wybranych użytkowników?
 are-you-sure-you-want-to-deactivate-the-user=Czy na pewno chcesz dezaktywować użytkownika? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Czy na pewno chcesz dezaktywować tego użytkownika? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Czy na pewno chcesz usunąć aplikację? Nie ma żadnych autoryzacji ani skojarzonych tokenów. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Czy na pewno chcesz usunąć aplikację? Ta akcja odwołuje 1 autoryzacji i skojarzone tokeny. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
