--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Tem certeza que deseja
 are-you-sure-you-want-to-deactivate-the-selected-users=Você tem certeza que deseja desativar os usuários selecionados?
 are-you-sure-you-want-to-deactivate-the-user=Tens a certeza de que você deseja desativar o usuário?
 are-you-sure-you-want-to-deactivate-this-user=Tem certeza que deseja desativar este usuário?
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Tem certeza que deseja excluir o aplicativo? Não existem autorizações ou tokens associados.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Tem certeza que deseja excluir o aplicativo? Esta ação revoga 1 autorização e tokens associados.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Tem certeza que deseja excluir o aplicativo? Esta ação revoga {0} autorizações e tokens associados.
