--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Are you sure you want 
 are-you-sure-you-want-to-deactivate-the-selected-users=Да ли сте сигурни да желите да деактивирате одабране кориснике?
 are-you-sure-you-want-to-deactivate-the-user=Are you sure you want to deactivate the user? (Automatic Copy)
 are-you-sure-you-want-to-deactivate-this-user=Are you sure you want to deactivate this user? (Automatic Copy)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Are you sure you want to delete the application? There are no authorizations or associated tokens. (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Are you sure you want to delete the application? This actions revokes 1 authorization and associated tokens. (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
