--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Are you sure you want 
 are-you-sure-you-want-to-deactivate-the-selected-users=தேர்ந்தெடுக்கப்பட்ட பயனர்களை செயலிழக்க விரும்புகிறீர்களா?
 are-you-sure-you-want-to-deactivate-the-user=நிச்சயமாக இந்த பயனரை செயலிழக்கச் செய்ய விரும்புகிறீர்களா?
 are-you-sure-you-want-to-deactivate-this-user=இந்த பயனாளியை முடக்கத் தயாரா?
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=நிச்சயமாக பயன்பாடு நீக்க வேண்டுமா? அங்கீகாரம் அல்லது தொடர்புடைய டோக்கன்கள் எதுவும் இல்லை.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=நிச்சயமாக பயன்பாடு நீக்க வேண்டுமா? இந்த நடவடிக்கைகள் 1 அங்கீகாரத்தையும் தொடர்புடைய டோக்கன்களையும் திரும்பப் பெறும்.
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=நிச்சயமாக பயன்பாடு நீக்க வேண்டுமா? இந்த நடவடிக்கைகள் {0} அங்கீகாரத்தையும் தொடர்புடைய டோக்கன்களையும் திரும்பப் பெறும்.
