--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -873,8 +873,8 @@ are-you-sure-you-want-to-deactivate-the-selected-accounts=Seçili hesapları dev
 are-you-sure-you-want-to-deactivate-the-selected-users=Seçili kullanıcıları etkisiz hale getirmek/engellemek istediğinizden emin misiniz?
 are-you-sure-you-want-to-deactivate-the-user=Kullanıcıyı devre dışı bırakmak istediğinizden emin misiniz? (Automatic Translation)
 are-you-sure-you-want-to-deactivate-this-user=Bu kullanıcıyı devre dışı bırakmak istediğinizden emin misiniz? (Automatic Translation)
-are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected Blueprints? (Automatic Copy)
-are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected Elements? (Automatic Copy)
+are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
+are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
 are-you-sure-you-want-to-delete-the-application-there-are-no-authorizations-or-associated-tokens=Uygulamayı silmek istediğinizden emin misiniz? Yetkilendirme veya ilişkili belirteç yok. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-one-authorization-and-associated-tokens=Uygulamayı silmek istediğinizden emin misiniz? Bu eylemler 1 yetkilendirmeyi ve ilişkili belirteçleri iptal eder. (Automatic Translation)
 are-you-sure-you-want-to-delete-the-application-this-action-revokes-x-authorizations-and-associated-tokens=Are you sure you want to delete the application? This actions revokes {0} authorizations and associated tokens. (Automatic Copy)
